--- a/windows/main_window.ui
+++ b/windows/main_window.ui
@@ -29,10 +29,10 @@
    <widget class="QLabel" name="background">
     <property name="geometry">
      <rect>
-      <x>-10</x>
-      <y>0</y>
-      <width>721</width>
-      <height>711</height>
+      <x>-240</x>
+      <y>-170</y>
+      <width>941</width>
+      <height>871</height>
      </rect>
     </property>
     <property name="text">
@@ -76,7 +76,7 @@
     <property name="font">
      <font>
       <family>Panton Light</family>
-      <pointsize>13</pointsize>
+      <pointsize>14</pointsize>
       <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
@@ -87,10 +87,9 @@
     </property>
     <property name="styleSheet">
      <string notr="true">color:white;
-font: 13pt &quot;Panton Light&quot;;
-background:rgba(99,99,99,129);
-border:.1px solid white;
-text-align:center</string>
+font: 14pt &quot;Panton Light&quot;;
+background:rgba(9,9,9,159);
+border:.1px solid white;</string>
     </property>
     <property name="text">
      <string/>
@@ -155,7 +154,7 @@ text-align:center</string>
     <property name="styleSheet">
      <string notr="true">color:white;
 font: 14pt &quot;Panton Light&quot;;
-background:rgba(99,99,99,129);
+background:rgba(9,9,9,159);
 border:.1px solid white;</string>
     </property>
     <property name="text">
@@ -202,7 +201,7 @@ border:.1px solid white;</string>
     <property name="styleSheet">
      <string notr="true">color:white;
 font: 14pt &quot;Panton Light&quot;;
-background:rgba(99,99,99,129);
+background:rgba(9,9,9,159);
 border:.1px solid white;</string>
     </property>
     <property name="html">
@@ -319,14 +318,14 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>-10</x>
-      <y>-90</y>
+      <x>-20</x>
+      <y>-60</y>
       <width>721</width>
       <height>801</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background:rgba(0,0,0,.2)</string>
+     <string notr="true">background:qlineargradient(spread:pad, x1:0.511318, y1:0.296, x2:0.505, y2:1, stop:0 rgba(0, 0, 0, 45), stop:1 rgba(7, 13, 45, 0))</string>
     </property>
     <property name="text">
      <string/>
@@ -370,7 +369,7 @@ p, li { white-space: pre-wrap; }
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="separator">
     <property name="geometry">
      <rect>
       <x>180</x>
@@ -426,7 +425,7 @@ p, li { white-space: pre-wrap; }
     <property name="styleSheet">
      <string notr="true">color:white;
 font: 14pt &quot;Panton Light&quot;;
-background:rgba(99,99,99,129);
+background:rgba(9,9,9,159);
 border:.1px solid white;</string>
     </property>
     <property name="html">
@@ -540,7 +539,7 @@ border:.1px solid white;</string>
    <widget class="QPushButton" name="copy_regex">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>310</x>
       <y>500</y>
       <width>101</width>
       <height>31</height>
@@ -562,7 +561,7 @@ border:.1px solid white;</string>
    <widget class="QPushButton" name="clear_regex_button">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>20</x>
       <y>500</y>
       <width>101</width>
       <height>31</height>
@@ -584,8 +583,8 @@ border:.1px solid white;</string>
    <widget class="QLabel" name="copied_label_regex">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>498</y>
+      <x>80</x>
+      <y>260</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -609,6 +608,94 @@ border:.1px solid white;</string>
      <string>copied</string>
     </property>
    </widget>
+   <widget class="QLabel" name="new_regex_label">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>260</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Panton Light</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white</string>
+    </property>
+    <property name="text">
+     <string>new regex</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBox_new_regex">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>270</y>
+      <width>16</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>true</bool>
+    </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::NoContextMenu</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="tristate">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="new_regex_button">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>265</y>
+      <width>91</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:transparent</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="set_regex">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>500</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Panton Light</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Set regex</string>
+    </property>
+   </widget>
    <zorder>background</zorder>
    <zorder>label</zorder>
    <zorder>logo</zorder>
@@ -624,7 +711,7 @@ border:.1px solid white;</string>
    <zorder>copy_uuid</zorder>
    <zorder>minimaze_button</zorder>
    <zorder>close_button</zorder>
-   <zorder>label_2</zorder>
+   <zorder>separator</zorder>
    <zorder>copied_label</zorder>
    <zorder>line_result</zorder>
    <zorder>letter_button</zorder>
@@ -634,6 +721,10 @@ border:.1px solid white;</string>
    <zorder>copy_regex</zorder>
    <zorder>clear_regex_button</zorder>
    <zorder>copied_label_regex</zorder>
+   <zorder>new_regex_label</zorder>
+   <zorder>checkBox_new_regex</zorder>
+   <zorder>new_regex_button</zorder>
+   <zorder>set_regex</zorder>
   </widget>
  </widget>
  <resources>
